finishing payment form and setting up transaction with stripe

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_CHEC_PUBLIC_KEY=pk_39321190bdb1211df176559b32a7689b06b506770436e
+REACT_APP_STRIPE_PUBLIC_KEY=pk_test_odh15Z2H8DDETiYFUQm7twh4
